cluster/k8s/langfuse/langfuse.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    goldilocks.fairwinds.com/vpa-update-mode: auto
  name: langfuse
spec: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse
  namespace: langfuse
spec:
  hostnames:
    - langfuse.allegedly.works
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: langfuse-web
          port: 3000
